fixed carousel spacing on top and bottom

--- a/public_html/stylesheet.css
+++ b/public_html/stylesheet.css
@@ -7,7 +7,6 @@ body {
 	background: url("images/pwp-backdrop.png") no-repeat center center fixed;
 	margin-top: 10px;
 	min-height: 70vh;
-	/*padding: 10rem;*/
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -33,6 +32,10 @@ body {
 	padding-top: 25vh;
 }
 
-.carousel img {
-	max-height: 730px;
+.carousel-inner img{
+position: relative;
+overflow:hidden;
+height: 90vh;
+max-width: 70vw;
+padding-left: 20%;
 }
